# mitmproxy

./: .appveyor.yml  .coveragerc  .deepsource.toml  .dockerignore  .env  .env.local.example  .gitattributes  .gitignore  .gitmodules  .jsbeautifyrc  .landscape.yml  .pre-commit-config.yaml  .python-version  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.base-onbuild  LICENSE  MANIFEST.in  NOTICE  README  README.md  README.mkd  README.rst  README.txt  SECURITY.md  UpgradingMitmProxy.MD  addon.py  autocomplete.bash  browserup-proxy.schema.json  browserup-proxy.spec  build  build-prod.sh  (+46 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: awscli-requirements.txt  dependabot.yml  pull_request_template.md
.husky/: pre-commit
.less/: variables.less
.sources/: bootswatch.less  examples_context.py  examples_setup.py  examples_setupall.py  examples_test.py  make
.specstory/: .what-is-this.md
OximyMac/: Info.plist  Makefile  OximyMac.entitlements  Package.resolved  Package.swift  README.md  create-xcode-project.sh  project.yml
OximyWindows/: .gitignore  OximyWindows.sln
clients/: README.md  build-clients.sh  config-csharp.yaml  config-java.yaml  config-javascript.yaml  config-python.yaml  config-ruby.yaml  nohup.out  openapitools.json  post-build-java-client.sh  publish-java-client.sh  publishing.overlay.build.gradle
doc-src/: 01-bootstrap.min.css  01-reset-fonts-grids-base.css  01-vendor.css  02-app.css  02-docstyle.css  03-blogstyle.css  _layout.html  _layout_full.html  _nav.html  _websitelayout.html  admin.html  anticache.html  certinstall.html  clientreplay.html  config.html  faq.html  filters.html  howmitmproxy.html  index.html  index.py  install.html  interception.html  intro.html  library.html  mitmdump.html  mitmproxy.1  mitmproxy.html  modes.html  pathoc.html  pathod.html  proxyauth.html  replacements.html  reverseproxy.html  scripts.html  serverreplay.html  setheaders.html  ssl.html  sticky.html  stickycookies.html  test.html  (+2 more)
docker/: Dockerfile  DockerfileARMv7  README.md  docker-entrypoint.sh
docs/: .gitignore  ISSUE-lsof-process-resolution.md  Makefile  README.md  WINDOWS_FEATURE_PARITY.md  build  build-archive  build-current  build.py  build.sh  certinstall.rst  ci  ci.sh  clientreplay.rst  conf.py  config.rst  custom-routing.txt  filters.rst  har.md  howmitmproxy.rst  index.rst  install.rst  introduction.rst  mitmdump.rst  mitmproxy.rst  mitmweb.rst  modd.conf  modes.rst  package.json  render_examples.py  sentry-e2e-investigation.md  sentry-logging-guide.md  setup  setup.sh  transparent.rst  upload-archive  upload-archive.sh  upload-dev.sh  upload-master  upload-stable  (+1 more)
examples/: README  README.md  add_header.py  arguments.py  beautify_javascript.py  change_upstream_proxy.py  cheat-knowbe4.py  classes.py  context_logging.py  custom_contentviews.py  dirdumper.py  dns_spoofing.py  dup_and_replay.py  fail_with_500.py  filt.py  flowbasic  flowfilter.py  flowwriter.py  full_transparency_shim.c  h2_push_promises.py  h2_settings.py  har_dump.py  har_extractor.py  harparser.py  iframe_injector  iframe_injector.py  ignore_websocket.py  keys.yaml  libpathod_pathoc.py  mitmproxy_shim.c  mitmproxywrapper.py  modify_form.py  modify_querystring.py  modify_response_body.py  nonblocking.py  pathoc.py  proxapp  proxapp.py  read_dumpfile  read_dumpfile.py  (+16 more)
java/: README.md
libmproxy/: __init__.py  app.py  authentication.py  certutils.py  cmdline.py  console.py  contentview.py  contentviews.py  controller.py  dump.py  encoding.py  exceptions.py  filt.py  flow.py  flow_export.py  flow_format_compat.py  main.py  netlib.py  netstring.py  playback.py  plugins.py  protocol.py  protocolold.py  proxy.py  record.py  recorder.py  script.py  stateobject.py  tcpserver.py  tnetstring.py  utils.py  version.py  wsgi.py
libpathod/: __init__.py  app.py  cmdline.py  handlers.py  language.py  log.py  main.py  netlib.py  opathod.py  pathoc.py  pathoc_cmdline.py  pathod.py  pathod_cmdline.py  rparse.py  test.py  utils.py  version.py
mitmproxy/: .coveragerc  .gitattributes  CHANGELOG  MANIFEST.in  README.rst  __init__.py  addonmanager.py  addons.py  certs.py  cmdline.py  command.py  command_lexer.py  connection.py  connections.py  contentviews.py  controller.py  ctx.py  ctxmanager.py  dev.bat  dns.py  dump.py  event_hooks.py  events.py  eventsequence.py  exceptions.py  export.py  filt.py  flow.py  flow_export.py  flow_format_compat.py  flowfilter.py  headspin.py  hooks.py  http.py  http2.py  io.py  io_compat.py  lexer.py  log.py  main.py  (+20 more)
netlib/: .appveyor.yml  .gitignore  .landscape.yml  LICENSE  MANIFEST.in  README.rst  basethread.py  basetypes.py  certffi.py  certutils.py  debug.py  encoding.py  exceptions.py  http.py  http_auth.py  http_cookies.py  http_semantics.py  http_status.py  http_uastrings.py  human.py  multidict.py  odict.py  protocol.py  setup.py  socks.py  stateobject.py  strutils.py  tcp.py  test.py  tservers.py  tutils.py  utils.py  version.py  version_check.py  websockets.py  wsgi.py
pathod/: .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.mkd  README.rst  __init__.py  app.py  log.py  pathoc  pathoc.py  pathoc_cmdline.py  pathod.py  pathod_cmdline.py  setup.py  test.py  utils.py  version.py
registry/: ai-tools.json  apps.json  apps_schema.json  import.json  import.py  traces_schema.json  websites.json  websites_schema.json
release/: .gitignore  README.md  README.mkd  build-and-deploy-docker.py  build.py  ci.py  cibuild.py  contributors  deploy-microsoft-store.py  deploy.py  github-release-notes.txt  known_hosts.enc  mitmdump.spec  mitmproxy.spec  mitmproxy.xml  mitmweb.spec  osx-binaries  pathoc.spec  pathod.spec  pyinstaller-mitmdump.spec  pyinstaller-mitmproxy.spec  release-checklist  release.py  rtool.pem  rtool.py  selftest.py  setup.py  test-release
scripts/: check_dev_mode.py  contributors
test/: .pry  __init__.py  conftest.py  filename_matching.py  full_coverage_plugin.py  handler.py  individual_coverage.py  mock_urwid.py  (+71 more)
(+4876 files in other folders)
